# interstellar-writer-astro

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  create_favicon.py
.github/workflows/: build-release.yml
DOCS/: DESARROLLO.md  DEVELOPMENT.md  MANUAL_USUARIO.md
DOCS/design/: design.pen
DOCS/diagrams/: class-diagram.md  dataflow-diagram.md  modules-diagram.md  sequence-save.md  state-post.md
openspec/changes/archive/fix-formatting-toolbar/: design.md  proposal.md  spec.md  tasks.md
src/: app.rs  main.rs  models.rs  utils.rs
src/services/: content.rs  files.rs  git.rs  mod.rs
src/ui/: components.rs  dashboard.rs  dialogs.rs  editor.rs  mod.rs  panels.rs  preview.rs  splash.rs  theme.rs  toolbar.rs
