[package]
name = "interstellar-writer-astro"
version = "1.0.5"
edition = "2021"
authors = ["Juan Oliver"]
license = "AGPL-3.0"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["svg", "image"] }
egui-notify = "0.17.0"
egui_commonmark = "0.18.0"
rfd = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.5"
git2 = "0.19"
chrono = "0.4"
toml = "0.8"
confy = "0.6"
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }

[build-dependencies]
# Para el icono en Windows si fuera necesario
