[package]
authors = ["Juan Oliver"]
edition = "2021"
license = "AGPL-3.0"
name = "interstellar-writer-astro"
version = "1.1.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
confy = "0.6"
dirs = "5"
eframe = "0.29.1"
egui = "0.29.1"
egui-notify = "0.17.0"
egui_commonmark = "0.18.0"
egui_extras = {version = "0.29.1", features = ["svg", "image"]}
git2 = "0.19"
image = {version = "0.25", default-features = false, features = ["png", "webp"]}
rfd = "0.15.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2.5"

[build-dependencies]
# Para el icono en Windows si fuera necesario
